enable_testing()
include(GoogleTest)

function(lgrn_add_test name sources libs)
    add_executable("test_${name}" ${sources})
    target_link_libraries("test_${name}" gtest_main ${libs})
    set_target_properties("test_${name}" PROPERTIES EXPORT_COMPILE_COMMANDS TRUE)
    gtest_discover_tests("test_${name}")
endfunction()

lgrn_add_test(hierarchical_bitset hierarchical_bitset.cpp longeron)
lgrn_add_test(intarray_multimap intarray_multimap.cpp longeron)
lgrn_add_test(bit_view bit_view.cpp longeron)
lgrn_add_test(id_registry id_management/registry.cpp longeron)
lgrn_add_test(id_set id_management/id_set.cpp longeron)
